@@ -4,4 +4,7 @@ Invalid free() / delete / delete[] / realloc()
  Address 0x........ is 0 bytes inside a block of size 177 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (doublefree.c:10)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (doublefree.c:8)
 
