@@ -10,6 +10,9 @@ Invalid read of size 1
  Address 0x........ is 5 bytes inside a block of size 10 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (err_disable1.c:27)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (err_disable1.c:26)
 
 
 --------- disabled (expect 0) ---------
@@ -23,6 +26,9 @@ Invalid read of size 1
  Address 0x........ is 5 bytes inside a block of size 10 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (err_disable1.c:27)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (err_disable1.c:26)
 
 
 --------- MULTI-LEVEL TEST (expect 2) ---------
@@ -33,6 +39,9 @@ Invalid read of size 1
  Address 0x........ is 5 bytes inside a block of size 10 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (err_disable1.c:27)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (err_disable1.c:26)
 
 Invalid read of size 1
    at 0x........: err (err_disable1.c:21)
@@ -40,6 +49,9 @@ Invalid read of size 1
  Address 0x........ is 5 bytes inside a block of size 10 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (err_disable1.c:27)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (err_disable1.c:26)
 
 
 --------- MULTI-LEVEL TEST end ---------
