@@ -7,6 +7,9 @@ Invalid read of size 1
  Address 0x........ is 5 bytes inside a block of size 10 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (err_disable2.c:28)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (err_disable2.c:27)
 
 
 --------- disabled (expect 0) ---------
