@@ -4,4 +4,8 @@ Invalid free() / delete / delete[] / realloc()
  Address 0x........ is 0 bytes inside a block of size 111,110 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (memalign_test.c:23)
+ Block was alloc'd at
+   at 0x........: memalign (vg_replace_malloc.c:...)
+   by 0x........: valloc (vg_replace_malloc.c:...)
+   by 0x........: main (memalign_test.c:16)
 
